--- a/clojure/tests/BUILD
+++ b/clojure/tests/BUILD
@@ -1,6 +1,14 @@
 load("//build_tools/clojure:clojure.bzl", "clojure")
 
 clojure(
-    name = "one_namespace",
-    srcs = glob(["test1/*.clj"]),
+    name = "one",
+)
+
+# automatically available are: "one_library", "one_deploy.jar"
+
+clojure(
+    name = "two",
+    deps = [
+        ":one_library",
+    ],
 )
